<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.databricks</groupId>
    <artifactId>databricks-jdbc-oss</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>
    <name>Databricks JDBC Driver</name>
    <description>Databricks JDBC Driver.</description>
    <url>https://github.com/databricks/databricks-jdbc</url>
    <developers>
        <developer>
            <name>Gopal Lal</name>
            <email>gopal.lal@databricks.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/databricks/databricks-jdbc.git</connection>
        <developerConnection>scm:git:https://github.com/databricks/databricks-jdbc.git</developerConnection>
        <url>https://github.com/databricks/databricks-jdbc</url>
    </scm>
  <properties>
    <arrow.version>13.0.0</arrow.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <mockito.version>5.2.0</mockito.version>
    <slf4j.version>2.0.7</slf4j.version>
    <jackson.version>2.15.1</jackson.version>
    <google.guava.version>31.1-jre</google.guava.version>
    <junit.jupiter.version>5.9.2</junit.jupiter.version>
    <google.findbugs.annotations.version>3.0.1</google.findbugs.annotations.version>
    <immutables.value.version>2.9.2</immutables.value.version>
    <httpclient.version>4.5.14</httpclient.version>
    <commons-io.version>2.13.0</commons-io.version>
    <databricks-sdk.version>0.11.0</databricks-sdk.version>
    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>com.databricks</groupId>
      <artifactId>databricks-sdk-java</artifactId>
      <version>${databricks-sdk.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-memory-core</artifactId>
      <version>${arrow.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-vector</artifactId>
      <version>${arrow.version}</version>
    </dependency>
    <dependency>
      <groupId>com.diffplug.spotless</groupId>
      <artifactId>spotless-maven-plugin</artifactId>
      <version>2.39.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-memory-netty</artifactId>
      <version>${arrow.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${httpclient.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>annotations</artifactId>
      <version>${google.findbugs.annotations.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${google.guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.immutables</groupId>
      <artifactId>value</artifactId>
      <version>${immutables.value.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
      <finalName>${project.artifactId}</finalName>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <executions>
            <execution>
              <goals>
                <goal>test-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>
              --add-opens=java.base/java.nio=ALL-UNNAMED
              -Dnet.bytebuddy.experimental=true
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <configuration>
            <archive>
              <manifest>
                <mainClass>com.databricks.jdbc.driver.DatabricksDriver</mainClass>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
            </archive>
          </configuration>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>single</goal>
              </goals>
              <configuration>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.39.0</version>
          <executions>
            <execution>
              <id>format</id>
              <goals>
                <goal>apply</goal>
              </goals>
              <phase>compile</phase>
            </execution>
          </executions>
          <configuration>
            <sourceDirectory>src/</sourceDirectory>
            <targetDirectory>src/</targetDirectory>
            <java>
              <googleJavaFormat>
                <version>1.18.1</version>
              </googleJavaFormat>
            </java>
          </configuration>
        </plugin>
      </plugins>
    </build>
</project>
